# git_count

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
git_count/: __init__.py  git_count.py
tests/: test_git_count.py
