[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "git-count"
version = "0.4.0"
description = "A Git commit activity visualization tool with advanced visualizations and detailed repository insights"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Uday Mungalpara" },
]
keywords = ["git", "commits", "visualization", "analytics", "statistics", "heatmap", "sparkline"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Utilities",
    "Topic :: Software Development :: Version Control :: Git",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "tqdm>=4.66.0",
    "plyer>=2.1.0",
]

[project.scripts]
git-count = "git_count.git_count:main"

[project.urls]
Homepage = "https://github.com/techUdayMungalpara/git_count"
"Bug Reports" = "https://github.com/techUdayMungalpara/git_count/issues"
Source = "https://github.com/techUdayMungalpara/git_count"

[project.optional-dependencies]
dev = ["pytest"]
